# multi_agent_ops_system

./: .flake8  .gitignore  README.md  TODO.md  claude.md  detailed_design.md  note.md  userstory.md  需求文档.md
adk_agent_samples/: human_in_loop_demo.py
adk_agent_samples/mcp_agent/: .env.example  CALLBACKS.md  README.md  __init__.py  agent.py  callback  requirements.txt  simple_script.sh  ssh_agent.py  test_agent.py
cz_agent_simple/: .env.example  README.md  __init__.py  agent.py  demo.py  mcp_client.py  mock_mcp_server.py  models.py  pyproject.toml  run_tests.py  state.py  test_agent.py  test_demo.py  test_mcp_client.py  test_mock_mcp_server.py  test_models.py  test_run_tests.py  test_state.py  test_tools.py  test_workflow.py  tools.py  workflow.py  需求文档.md  项目总结.md
cz_agent_simple/scripts/: check_env.py  simple_demo.py  verify_setup.py
cz_agent_with_op_agent/: requirements.md
cz_mcp/: README.md  cluster_server.py  demo_mcp_tools.py  test_cluster_server.py
